bad/return_null_in_func_returning_int.example_compiler_output
ERROR
[1mbad/return_null_in_func_returning_int.lat:2:21: [1;31merror: [0;1mreturned value of type `null` is not convertible to return type `int`[m
int test() { return null; }
                    [1;32m^[m
